# pacman

./: .gitignore  Cargo.toml  build-web.sh  readme.md
levels/: bouncing.json  classic.json  conga.json  corridor.json  cycle.json  doubleTrouble.json  evade.json  four  impossible.json  itsATrap.json  maze.json  simple1.json  simple2.json  simpleGhost.json  wall.json
pacman-core/: Cargo.toml
pacman-core/src/: contract.rs  evaluator.rs  lib.rs  rate_limiter.rs  scoreboard.rs
pacman-server/: Cargo.toml
pacman-server/src/: config.rs  contract.rs  main.rs
pacman-web-editor/src/: Main.elm
pacman-web-login/: elm.json
pacman-web-login/src/: Main.elm
static/: editor.html  login.html
