[package]
name = "pacman-server"
version = "0.1.0"
authors = ["djade <djadenkus@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.19"
log = "0.4.6"
fern = "0.5.7"
chrono = "0.4.6"
serde = { version = "1.0.89", features = ["derive"] }
actix = "0.7.9"
futures = "0.1.25"
pacman-core = { path = "../pacman-core" }
structopt = "0.2.17"
